semester2/object_oriented_programming/tps/.svn/pristine/cc/cc5306cbdb8bc1394e38ba03356845ba32fd1e1e.svn-base
allumettes/StrategieNaive.java:8: error: cannot find symbol
		return Generateur.nb_Aleatoire(jeu);
		       ^
  symbol:   variable Generateur
  location: class StrategieNaive
1 error
